--- a/web_dashboard/templates/index.html
+++ b/web_dashboard/templates/index.html
@@ -98,6 +98,7 @@
                             <th data-sort="backend">Backend ↕</th>
                             <th data-sort="env">Env ↕</th>
                             <th data-sort="prefill">Prefill ↕</th>
+                            <th data-sort="eviction">Eviction ↕</th>
                             <th data-sort="tokens">Tokens ↕</th>
                             <th data-sort="ttft">TTFT (ms) ↕</th>
                             <th data-sort="tbt">TBT (ms) ↕</th>
