--- a/web_dashboard/templates/index.html
+++ b/web_dashboard/templates/index.html
@@ -96,6 +96,7 @@
                             <th data-sort="select"><input type="checkbox" id="select-all"></th>
                             <th data-sort="date">Date ↕</th>
                             <th data-sort="backend">Backend ↕</th>
+                            <th data-sort="device">Device ↕</th>
                             <th data-sort="env">Env ↕</th>
                             <th data-sort="prefill">Prefill ↕</th>
                             <th data-sort="eviction">Eviction ↕</th>
